<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center"
    android:focusableInTouchMode="true"
    android:descendantFocusability="beforeDescendants"
    tools:context="com.piramidsoft.sirs.PendaftaranActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_bg"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:layout_width="250dp"
                android:layout_height="150dp"
                android:src="@drawable/icon_surya_putih" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/create_account"
                android:textColor="@android:color/white"
                android:textSize="@dimen/size_med" />

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_daftar"
                android:orientation="vertical"
                android:padding="20dp">

                <EditText
                    android:visibility="gone"
                    android:id="@+id/etKodePasien"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_view_biru_telur"
                    android:enabled="false"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:textSize="@dimen/size_small" />

                <EditText
                    android:id="@+id/etNamaLengkap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_view_biru_telur"
                    android:hint="@string/nama"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:textSize="@dimen/size_small" />

                <RadioGroup
                    android:id="@+id/rg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbP"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pria"
                        android:textColor="@android:color/white" />

                    <RadioButton
                        android:id="@+id/rbW"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wanita"
                        android:textColor="@android:color/white" />
                </RadioGroup>

                <EditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_view_biru_telur"
                    android:hint="@string/phone_number"
                    android:inputType="number"
                    android:maxLength="13"
                    android:padding="10dp"
                    android:textSize="@dimen/size_small" />

                <EditText
                    android:id="@+id/etUmur"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_view_biru_telur"
                    android:hint="@string/usia"
                    android:inputType="number"
                    android:padding="10dp"
                    android:textSize="@dimen/size_small" />

                <EditText
                    android:id="@+id/etTTL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_view_biru_telur"
                    android:hint="@string/ttl"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textSize="@dimen/size_small" />

                <Spinner
                    android:id="@+id/spIdentitas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_view_biru_telur"
                    android:padding="7dp"
                    android:entries="@array/identitas"
                    android:textSize="@dimen/size_small" />

                <EditText
                    android:id="@+id/etIdentitas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_view_biru_telur"
                    android:hint="@string/no_identitas"
                    android:inputType="number"
                    android:padding="10dp"
                    android:textSize="@dimen/size_small" />

                <EditText
                    android:id="@+id/etNoKK"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_view_biru_telur"
                    android:hint="@string/no_kk"
                    android:inputType="number"
                    android:padding="10dp"
                    android:textSize="@dimen/size_small" />

                <EditText
                    android:id="@+id/etNamaOrtu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_view_biru_telur"
                    android:hint="@string/ortu"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:textSize="@dimen/size_small" />

                <EditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_view_biru_telur"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textSize="@dimen/size_small" />

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_view_biru_telur"
                    android:hint="@string/password"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textSize="@dimen/size_small" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgKtp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true" />

                    <Button
                        android:id="@+id/btTake"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/browse"
                        android:textAllCaps="false"/>
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btRegestrasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/ripple_button_putih"
                android:text="@string/create_account"
                android:textAllCaps="false" />

        </LinearLayout>

    </ScrollView>


</RelativeLayout>
