<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    android:orientation="vertical"
    tools:context="com.piramidsoft.sirs.RekammedisActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/btIndexRawatJalan"
        app:cardBackgroundColor="#49A942"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="@dimen/size_med"
                android:textColor="@android:color/white"
                android:padding="15dp"
                android:text="@string/rawatjalan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/btINdexRawatInap"
        app:cardBackgroundColor="#2292A7"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:padding="15dp"
                android:textSize="@dimen/size_med"
                android:textColor="@android:color/white"
                android:text="@string/rawatinap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/btIGD"
        app:cardBackgroundColor="#E04646"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:padding="15dp"
                android:text="@string/igd"
                android:textSize="@dimen/size_med"
                android:textColor="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
